--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xdlocalstorage-separately",
-  "version": "1.0.16",
+  "version": "1.0.13",
   "main": "dist/xdLocalStorage.min.js",
   "repository": "https://github.com/fantajeon/cross-domain-local-storage-separately.git",
   "author": "Hyeokjune Jeon <fantajeon@naver.com>",
@@ -17,7 +17,8 @@
   "keywords": [
     "local storage",
     "cross domain web storage",
-    "web storage"
+    "web storage",
+    "iframe"
   ],
   "dependencies": {
     "html-webpack-plugin": "^2.30.1",
